<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_host"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.itheamc.licensefinder.ui.HomeFragment"
        android:label="@string/license_finder"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.itheamc.licensefinder.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultsFragment"
        android:name="com.itheamc.licensefinder.ui.ResultsFragment"
        android:label="@string/results"
        tools:layout="@layout/fragment_results">
        <action
            android:id="@+id/action_resultsFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.itheamc.licensefinder.ui.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details" />
</navigation>