<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="#00FFFFFF">

    <TextView
        android:id="@+id/labelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="8dp"
        android:elevation="2dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/date_of_birth"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="@id/datePicker"
        app:layout_constraintTop_toTopOf="@id/datePicker" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:textColor="@color/teal_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/confirmButton"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
        app:strokeColor="@color/teal_700" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ok"
        android:textColor="@color/teal_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/teal_700" />


</androidx.constraintlayout.widget.ConstraintLayout>