<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LicenseFragment">

    <LinearLayout
        android:id="@+id/licenseLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextDlcNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/driving_license_no"
            android:inputType="date"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textColorHint="#A8BB86FC"/>

        <EditText
            android:id="@+id/editTextBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/_24_05_1997"
            android:inputType="date"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textColorHint="#A8BB86FC" />

        <Button
            android:id="@+id/generateDemoButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/find"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/generate"
            android:textColor="@color/purple_200"
            app:cornerRadius="24dp"
            app:strokeColor="@color/purple_200" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
