<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.SearchFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textColorHint="#A8BB86FC" />

        <EditText
            android:id="@+id/editTextDlNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/driving_license_no"
            android:inputType="phone"
            android:paddingStart="24dp"
            android:paddingTop="8dp"
            android:paddingEnd="24dp"
            android:paddingBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textColorHint="#A8BB86FC" />

        <Button
            android:id="@+id/findButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/find"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/search"
            android:textColor="@color/purple_200"
            app:cornerRadius="24dp"
            app:strokeColor="@color/purple_200" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="48dp"
        android:indeterminateTint="@color/purple_200"
        android:progressTint="@color/purple_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-light"
        android:text="Please enter your name or license number or both to search your license print status."
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>